Added recyclerview to fragment. NotesListActivity calls fragment. Created NoteRowListViewHolder Created row_note.xml

--- a/app/src/main/res/layout/activity_notes_list.xml
+++ b/app/src/main/res/layout/activity_notes_list.xml
@@ -11,6 +11,7 @@
     tools:context="com.marin.saul.noteapp.NotesListActivity">
 
     <fragment
+        android:id="@+id/fragment_note_list"
         android:name="com.marin.saul.noteapp.NoteListFragment"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
