--- a/app/src/main/res/layout/fragment_note_list.xml
+++ b/app/src/main/res/layout/fragment_note_list.xml
@@ -6,4 +6,11 @@
     android:background="#aaf"
     >
 
+    <android.support.v7.widget.RecyclerView
+        android:id="@+id/fragment_note_list_note_list"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+
+        />
+
 </FrameLayout>
